--- a/VRChat/88/1292988.html
+++ b/VRChat/88/1292988.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "y7ycGWV+iKX661cNphtUvGvSMrHLE3ffd/J7cA20UrI="></script>
+    "5b5+azWCyFmyPNUvETse4HrIBEadYWGHo5yBi7VaI0I="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[3Dモデル]使い捨てマスク[折り畳み可]","description":"花粉がひどくなってきたのでマスクを作りました。\nシェイプキーで畳んでずらして顎マスク状態にもできます。\n下部説明と利用規約を読んだ上での利用をお願いします。\nポリゴン数：三角面624\n問い合わせ等はこちら(https://twitter.com/HarryDrums5)動かない、うまくいかない等あれば連絡ください","url":"https://booth.pm/ja/items/1292988","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"400"},"image":"https://booth.pximg.net/c/620x620/c048ece8-d18f-41ac-af67-bab239496c6a/i/1292988/d18713a9-2981-43a6-9780-ac18d7fc59b8_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="y7ycGWV+iKX661cNphtUvGvSMrHLE3ffd/J7cA20UrI="></script>
+    nonce="5b5+azWCyFmyPNUvETse4HrIBEadYWGHo5yBi7VaI0I="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -493,9 +493,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
