--- a/VRChat/63/1292963.html
+++ b/VRChat/63/1292963.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "lghrd/q+2XiXbYJpxhhu3CD8DfWANeBKGCguOM4W+jw="></script>
+    "kl+Xj3WaqpjOcShxc7IFmINNhtC83DFfKUHe2WZT+jM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[VRC想定モデル] 　空想洋酒シリーズ3本セットvol.1","description":"2020/05/13更新　gzファイルに圧縮されたバグを解決しました。\ngzファイルが混同していた場合は削除しユニティパッケージの方を使用していただくようお願いいたします。\ngzファイルしかなかった場合、解凍後unitypackage.gzの.gz\nを削除すれば通常のunitypackageファイルになります。\n\n[VRC想定モデル] お酒　空想洋酒シリーズ3本セット 紹介文\n\n\n・以下に説明、利用規約が記載されておりますので、\nご購入の前に必ずお読みいただき、ご確認の上でのご購入をお願いいたします。\n\nVRChat用3Dモデルです。\n\nユニティパッケージとしてオブジェクト、テクスチャ、マテリアルを纏めてあります。\n\nシェーダーはスタンダードシェーダーです。\n\nGin 486ポリゴン\nVermot 640ポリゴン\nVodka 896ポリゴン\n\n・ 営利利用: 可能\n\n・ 改変: 可能\n　改造モデルの再配布、販売を禁じます。\n　改造モデル著作権はカルトンに帰属するものとします。\n\n・ R-18, R-18Gコンテンツでの利用: 可能\n\n・再配布: 禁止\n\n・購入者以外が自由に本モデルを\n　使用することができるような行為を禁止いたします。\n\n・政治、宗教活動、他者に対する誹謗中傷目的での使用を禁止します。\n\n・本モデル、改造モデルを使用することによって生じた何らかのトラブル、損失に対しカルトンは一切責任を負わないものとします。\n","url":"https://booth.pm/ja/items/1292963","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/822c39ce-e39f-4e36-a2bb-947db8479183/i/1292963/1b6c7dc9-f818-41fa-9569-866148ded6a0_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="lghrd/q+2XiXbYJpxhhu3CD8DfWANeBKGCguOM4W+jw="></script>
+    nonce="kl+Xj3WaqpjOcShxc7IFmINNhtC83DFfKUHe2WZT+jM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -389,9 +389,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
