--- a/VRChat/03/1292103.html
+++ b/VRChat/03/1292103.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "oAPncLymjp7X738TWfy3jtx2AIG7RG2PfNo990KYo8s="></script>
+    "wfBbWIJAn3qKG6jrAxLW1Zv1jztPwA/zN0gc26FVGTU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRoidモデル用テクスチャ「バスタオル」","description":"VRoidモデル用のバスタオルです。オーソドックスなピンクとブルーのデザインとなってます。VRChatの温泉やお風呂ワールドでご利用してもらえたらと作りました。テクスチャは素体(女子)用となってますのでそちらにインポートしてご利用ください。 ※追加で別カラーも更新予定ですので是非随時チェックしてお気に入りのカラーをＤＬしてください。\n","url":"https://booth.pm/ja/items/1292103","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/9adc43f5-dd1f-4ea5-b3e1-6fca0f66c5b8/i/1292103/1264d7bb-542b-49fc-bf72-b55423e00d55_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="oAPncLymjp7X738TWfy3jtx2AIG7RG2PfNo990KYo8s="></script>
+    nonce="wfBbWIJAn3qKG6jrAxLW1Zv1jztPwA/zN0gc26FVGTU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -412,9 +412,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
