--- a/VRChat/41/1291841.html
+++ b/VRChat/41/1291841.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "VJQZFtOmNljCg+Jj54PdeAlhy79yc/blnWWel1T26ko="></script>
+    "VlJWtPTGxcf5cyPX5Rf7S/HFpiRGaTaxwXsSe+9LF14="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料あり】こたつ【Unity/VRChat】","description":"こたつです。\nワールドとかに置いてやってください。\n\n中身\n・Kotatsu.unitypackage\n・Lisence.txt\n\n\u003c利用規約\u003e\n・禁止事項\n第三者への再配布\n自作発言\n\n・可能なこと\nモデルの改変\nUnityやVRChat以外での利用\n商用利用\n\n・著作権\n本モデルの著作権は当方が有するものとします。","url":"https://booth.pm/ja/items/1291841","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/986023a5-9d6b-4b00-a3c7-8c6a866c4b8e/i/1291841/ace6925e-1c56-40c9-92d7-c34a6f566dea_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="VJQZFtOmNljCg+Jj54PdeAlhy79yc/blnWWel1T26ko="></script>
+    nonce="VlJWtPTGxcf5cyPX5Rf7S/HFpiRGaTaxwXsSe+9LF14="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -462,9 +462,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
