--- a/VRChat/24/1291724.html
+++ b/VRChat/24/1291724.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "tz+38b07TIoRyqOFsHIM6x03zgcOOdqkijoZNs5d/wQ="></script>
+    "8MEqzymyV3dEmQJ4K2JCVIB7wT7d/I5yi2wo9VfS7qA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat向け】メカ系イメージ尻尾「MTail」PB対応とシェーダー変更しました。","description":"メカ系イメージ尻尾「Mtail」\n\nVRC想定のメカイメージの尻尾です。\n\nPB対応とエンドボーン追加とシェーダーをUnlit_WF_Shadeに変更とテクスチャの追加をしました。\n\nTextureフォルダに.clipと.psdファイルがあります。\n\n\n\n　　説明\n\n事前にUnlit_WF_Shaderをインポートしておいてください。\n\nMtail20220606.unitypackageをunityにインポートしてください。\n\nプレファブをヒエラルキーに入れアバターのhipボーンの階層等においてください。\n\n\n 　利用規約\n\n対象コンテンツの利用権利の販売となります。\nコンテンツを改変および任意メディアで利用することができます。\n\n\n\nただし下記を禁止します。\n\n\n\n　他人が利用できるようにし、著作者の販売を阻害すること。\n\n　コンテンツ自体に政治的または宗教的もしくは反社会的なメッセージを持たせること。\n　利用権利は他人に譲渡することができません。\n\n\n その他\n\n　 コンテンツあるいは発生した不利益に対して著作者はなんら責任を負いません。\n\n\nこのライセンスにおける解説情報は下記になります。\n\nhttps://gitlab.com/towelfunnelvrc/towel-license/blob/master/%E8%B2%A9%E5%A3%B2%E7%94%A8.md\nhttps://gitlab.com/towelfunnelvrc/towel-license/-/wikis/home\n（タオルライセンス 販売用 version0.9）\n　　　　\nシェーダーにUnlit_WF_Shaderを使わせてもらっています。\n\n(https://github.com/whiteflare/Unlit_WF_ShaderSuite/releases)\n\n作成者　KK","url":"https://booth.pm/ja/items/1291724","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/59f43df1-17f0-49b3-ad41-47c8b0d2ce1f/i/1291724/57f6b137-3a99-4fcd-b56f-a1e1dbfd43af_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="tz+38b07TIoRyqOFsHIM6x03zgcOOdqkijoZNs5d/wQ="></script>
+    nonce="8MEqzymyV3dEmQJ4K2JCVIB7wT7d/I5yi2wo9VfS7qA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -169,7 +169,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      722
+                                      723
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -185,7 +185,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      722
+                                      723
                                     </div>
                                   </div></a>
                                 </div>
@@ -407,9 +407,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
