--- a/VRChat/01/1288901.html
+++ b/VRChat/01/1288901.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "9BFnbSU6KzdP4wV897UaOA0BCvzJAfdQXuvSuJxgTc8="></script>
+    "XGKs/ihyYveB4esjhCQLqa7uExlEI7rjyYSP7tqIygE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナルアバター「たにぐち」","description":"オリジナルアバター「たにぐち」 紹介文\n\n□□オリジナルアバター「たにぐち」□□\n\n本モデルはVRChatでの使用を想定して制作されています。\n\n・ポリゴン数: 44252△　チャイナ服版　42583△\n・ OVRLipsync: 15種類\n・ BlendShape: 98種類\n・ アニメーションオーバーライド設定済み 7種\n・リップシンク、アイトラッキング対応\n・arktoon-shaders 設定済\n・VRC SDK 設定済\n\n□同梱データ□\n\n・3Dモデルfbxデータ\n\nTANIGUTI.fbx: \nTANIGUTIcha.fbx\n\n・テクスチャpngデータ\n\nモデル用テクスチャ\nhead.png\nbody.png\nhair.png\n表情.png\n\nMatCap用\na.png\nw.png\n\nアウトラインのマスク用\nmasuku.png\n\n\n・UnityPackageデータ\nTANIGUTI.unitypackage\nTANIGUTIcha.unitypackage\n\n\nReadme.txt\n\n\n□利用規約\n・本モデルを使用した時点で、利用規約に同意したものとみなします。\n・色替えや改造はご自由にどうぞ。\n・VRC以外の媒体（ゲーム、アニメーション、アプリ）での使用も可能です\n・営利利用、収益化なども制限しません。\n・R-18・R-18Gへの利用は制限しませんが、住み分けはしっかり行ってください。\n\n□禁止事項\n\n・公序良俗、良識に反する使用。\n・政治、宗教的利用、他者、他団体を傷つけたり陥れる行為への使用。\n・自作発言\n・購入者以外の方がモデルデータを使用できる状態にすること\n（再配布、アバターペデスタル及びアバタークローン化など）\n\n□免責事項\n\n・本モデルを使用して発生したいかなる損害、損失、不利益に関して、\n　当方は一切の責任を負いません。\n\n\n□導入方法\n\n①Unity 2017.4.15f1で新規プロジェクトを作成。\n\n②VRCSDKとarktoon-shadersをインポートします。\n\n③同様に本データ付属のunitypackageをインポートします。\n\n④prepabをHierarchyに置き、VRCSDKを用いてアップロードをおこなってください。\n\n\n_________________________________________________________\n\nその他不明事項等、何かありましたらご連絡ください。\n\n製作者: 作成参謀\n\ntwitter: @sakuseisanbo","url":"https://booth.pm/ja/items/1288901","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2500"},"image":"https://booth.pximg.net/c/620x620/20bbf43f-f3fa-4bdf-b36d-12828e517996/i/1288901/443f4d2e-82c1-4741-9256-910853e3f3a4_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="9BFnbSU6KzdP4wV897UaOA0BCvzJAfdQXuvSuJxgTc8="></script>
+    nonce="XGKs/ihyYveB4esjhCQLqa7uExlEI7rjyYSP7tqIygE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -169,7 +169,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      160
+                                      159
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -185,7 +185,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      160
+                                      159
                                     </div>
                                   </div></a>
                                 </div>
@@ -445,9 +445,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
